manifests/security/allow-dns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: ecom
spec:
  podSelector: {}
  policyTypes:
    - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system

      podSelector:
        matchLabels:
          k8s-app: kube-dns

    ports:
    - protocol: UDP
      port: 53

    - protocol: TCP
      port: 53
