manifests/security/allow-mysql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql
  namespace: ecom
spec:
  podSelector:
    matchLabels:
      app: mysql

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service

        - podSelector:
            matchLabels:
              app: user-service

        - podSelector:
            matchLabels:
              app: order-service

        - podSelector:
            matchLabels:
              app: product-service

      ports:
        - protocol: TCP
          port: 3306
