manifests/security/allow-prometheus.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: ecom
spec:
  podSelector: {}
  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
