manifests/security/internal-ecom.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-ecom
  namespace: ecom
spec:
  podSelector: {} # Applies to all pods in ecom
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {} # Allows ingress from any pod within ecom namespace
  egress:
    - to:
        - podSelector: {} # Allows egress to any pod within ecom namespace
